feat(client): add CLI options
Signed-off-by: Xin Liu <sam@secondstate.io>

--- a/gaia-mcp-client/Cargo.toml
+++ b/gaia-mcp-client/Cargo.toml
@@ -19,3 +19,4 @@ hyper-util         = { workspace = true, features = ["tokio"] }
 tokio-tungstenite  = { workspace = true }
 reqwest            = { workspace = true, features = ["json"] }
 pin-project-lite   = { workspace = true }
+clap               = { version = "^4.5", features = ["cargo", "derive"] }
