--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,11 @@
 [workspace]
-members  = ["gaia-mcp-client", "gaia-calculator-mcp-server", "gaia-weather-mcp-server", "gaia-qdrant-mcp-server"]
+members = [
+    "gaia-mcp-client",
+    "gaia-calculator-mcp-server",
+    "gaia-weather-mcp-server",
+    "gaia-qdrant-mcp-server",
+    "gaia-qdrant-common",
+]
 resolver = "3"
 
 [workspace.dependencies]
@@ -18,3 +24,4 @@ hyper-util         = "0.1"
 tokio-tungstenite  = "0.26.2"
 reqwest            = "0.12"
 pin-project-lite   = "0.2"
+gaia-qdrant-common = { path = "gaia-qdrant-common" }
