chore(client): add `gaia-qdrant-common` dep
Signed-off-by: Xin Liu <sam@secondstate.io>

--- a/gaia-mcp-client/Cargo.toml
+++ b/gaia-mcp-client/Cargo.toml
@@ -20,3 +20,4 @@ tokio-tungstenite  = { workspace = true }
 reqwest            = { workspace = true, features = ["json"] }
 pin-project-lite   = { workspace = true }
 clap               = { version = "^4.5", features = ["cargo", "derive"] }
+gaia-qdrant-common = { workspace = true }
