chore(qdrant): add `gaia-qdrant-common` dep
Signed-off-by: Xin Liu <sam@secondstate.io>

--- a/gaia-qdrant-mcp-server/Cargo.toml
+++ b/gaia-qdrant-mcp-server/Cargo.toml
@@ -19,3 +19,4 @@ hyper-util         = { workspace = true, features = ["tokio"] }
 tokio-tungstenite  = { workspace = true }
 reqwest            = { workspace = true, features = ["rustls-tls", "json"] }
 pin-project-lite   = { workspace = true }
+gaia-qdrant-common = { workspace = true }
