--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,24 +4,27 @@ members = [
     "gaia-calculator-mcp-server",
     "gaia-weather-mcp-server",
     "gaia-qdrant-mcp-server",
-    "gaia-qdrant-common", "gaia-kwsearch-mcp-server",
+    "gaia-qdrant-common",
+    "gaia-kwsearch-mcp-server",
+    "gaia-kwsearch-common",
 ]
 resolver = "3"
 
 [workspace.dependencies]
-rmcp               = { git = "https://github.com/modelcontextprotocol/rust-sdk.git", branch = "main" }
-tokio              = "1"
-serde              = "1.0"
-serde_json         = "1.0"
-anyhow             = "1.0"
-tracing            = "0.1"
-tracing-subscriber = "0.3"
-futures            = "0.3"
-rand               = "0.8"
-schemars           = "0.8"
-hyper              = "1"
-hyper-util         = "0.1"
-tokio-tungstenite  = "0.26.2"
-reqwest            = "0.12"
-pin-project-lite   = "0.2"
-gaia-qdrant-common = { path = "gaia-qdrant-common" }
+rmcp                 = { git = "https://github.com/modelcontextprotocol/rust-sdk.git", branch = "main" }
+tokio                = "1"
+serde                = "1.0"
+serde_json           = "1.0"
+anyhow               = "1.0"
+tracing              = "0.1"
+tracing-subscriber   = "0.3"
+futures              = "0.3"
+rand                 = "0.8"
+schemars             = "0.8"
+hyper                = "1"
+hyper-util           = "0.1"
+tokio-tungstenite    = "0.26.2"
+reqwest              = "0.12"
+pin-project-lite     = "0.2"
+gaia-qdrant-common   = { path = "gaia-qdrant-common" }
+gaia-kwsearch-common = { path = "gaia-kwsearch-common" }
