feat: create `gaia-weather-mcp-server-stdio` and `gaia-weather-mcp-client`
Signed-off-by: Xin Liu <sam@secondstate.io>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ members = [
     "gaia-kwsearch/gaia-kwsearch-mcp-server",
     "gaia-kwsearch/gaia-kwsearch-common",
     "gaia-kwsearch/gaia-kwsearch-mcp-server-stdio",
-    "gaia-kwsearch/gaia-kwsearch-mcp-client",
+    "gaia-kwsearch/gaia-kwsearch-mcp-client", "gaia-weather-mcp-server-stdio", "gaia-weather-mcp-client",
 ]
 resolver = "3"
 
