--- a/gaia-weather/gaia-weather-mcp-client/Cargo.toml
+++ b/gaia-weather/gaia-weather-mcp-client/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-rmcp               = { workspace = true, features = ["client", "macros", "transport-io", "transport-child-process"] }
+rmcp               = { workspace = true, features = ["client", "macros", "transport-io", "transport-child-process", "transport-sse"] }
 tokio              = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "io-std", "net", "fs", "time"] }
 serde_json         = { workspace = true }
 anyhow             = { workspace = true }
