--- a/gaia-kwsearch/gaia-kwsearch-common/Cargo.toml
+++ b/gaia-kwsearch/gaia-kwsearch-common/Cargo.toml
@@ -8,21 +8,19 @@ categories  = ["data-structures"]
 description = "Data types and utilities for the Gaia keyword search MCP"
 
 [dependencies]
-rmcp = { workspace = true, features = ["server", "macros"] }
-tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "io-std", "net", "fs", "time"] }
-serde = { workspace = true, features = ["derive"] }
-serde_json = { workspace = true }
-anyhow = { workspace = true }
-tracing = { workspace = true }
+rmcp               = { workspace = true, features = ["server", "macros"] }
+tokio              = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "io-std", "net", "fs", "time"] }
+serde              = { workspace = true, features = ["derive"] }
+serde_json         = { workspace = true }
+anyhow             = { workspace = true }
+tracing            = { workspace = true }
 tracing-subscriber = { workspace = true, features = ["env-filter", "std", "fmt"] }
-futures = { workspace = true }
-rand = { workspace = true }
-schemars = { workspace = true }
-hyper = { workspace = true, features = ["client", "server", "http1"] }
-hyper-util = { workspace = true, features = ["tokio"] }
-tokio-tungstenite = { workspace = true }
-reqwest = { workspace = true, features = ["json"] }
-pin-project-lite = { workspace = true }
-endpoints = { version = "0.25.1", features = [
-    "index",
-], git = "https://github.com/LlamaEdge/LlamaEdge.git", branch = "feat-mcp-client" }
+futures            = { workspace = true }
+rand               = { workspace = true }
+schemars           = { workspace = true }
+hyper              = { workspace = true, features = ["client", "server", "http1"] }
+hyper-util         = { workspace = true, features = ["tokio"] }
+tokio-tungstenite  = { workspace = true }
+reqwest            = { workspace = true, features = ["json"] }
+pin-project-lite   = { workspace = true }
+endpoints          = { version = "0.26.0", features = ["index"] }
