--- a/gaia-kwsearch/gaia-kwsearch-mcp-server-stdio/Cargo.toml
+++ b/gaia-kwsearch/gaia-kwsearch-mcp-server-stdio/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name    = "gaia-kwsearch-mcp-server-stdio"
-version = "0.1.0"
-edition = "2024"
+version = { workspace = true }
+edition = { workspace = true }
 
 [dependencies]
 rmcp                 = { workspace = true, features = ["server", "macros", "transport-io"] }
