--- a/gaia-calculator/gaia-calculator-mcp-server/Cargo.toml
+++ b/gaia-calculator/gaia-calculator-mcp-server/Cargo.toml
@@ -1,7 +1,9 @@
 [package]
-name    = "gaia-calculator-mcp-server"
-version = "0.1.0"
-edition = "2024"
+name       = "gaia-calculator-mcp-server"
+version    = { workspace = true }
+edition    = { workspace = true }
+repository = { workspace = true }
+license    = { workspace = true }
 
 [dependencies]
 rmcp               = { workspace = true, features = ["server", "macros"] }
