--- a/gaia-qdrant/gaia-qdrant-mcp-server-stdio/Cargo.toml
+++ b/gaia-qdrant/gaia-qdrant-mcp-server-stdio/Cargo.toml
@@ -1,7 +1,9 @@
 [package]
-name    = "gaia-qdrant-mcp-server-stdio"
-version = "0.1.0"
-edition = "2024"
+name       = "gaia-qdrant-mcp-server-stdio"
+version    = { workspace = true }
+edition    = { workspace = true }
+repository = { workspace = true }
+license    = { workspace = true }
 
 [dependencies]
 rmcp               = { workspace = true, features = ["server", "macros", "transport-io"] }
