--- a/gaia-elastic/gaia-elastic-mcp-client/Cargo.toml
+++ b/gaia-elastic/gaia-elastic-mcp-client/Cargo.toml
@@ -14,3 +14,4 @@ tracing                 = { workspace = true }
 tracing-subscriber      = { workspace = true, features = ["env-filter", "std", "fmt"] }
 clap                    = { version = "^4.5", features = ["cargo", "derive"] }
 gaia-elastic-mcp-common = { path = "../gaia-elastic-mcp-common" }
+reqwest                 = { workspace = true, features = ["json"] }
