chore: bump `rmcp` to `c1c4c9a0`
Signed-off-by: Xin Liu <sam@secondstate.io>

--- a/gaia-calculator/gaia-calculator-mcp-client/Cargo.toml
+++ b/gaia-calculator/gaia-calculator-mcp-client/Cargo.toml
@@ -6,10 +6,16 @@ repository = { workspace = true }
 license    = { workspace = true }
 
 [dependencies]
-rmcp               = { workspace = true, features = ["client", "macros", "transport-io", "transport-child-process", "transport-sse"] }
-tokio              = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "io-std", "net", "fs", "time"] }
-serde_json         = { workspace = true }
-anyhow             = { workspace = true }
-clap               = { workspace = true, features = ["cargo", "derive"] }
-tracing            = "0.1"
+rmcp = { workspace = true, features = [
+    "client",
+    "macros",
+    "transport-io",
+    "transport-child-process",
+    "transport-sse-client",
+] }
+tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "io-std", "net", "fs", "time"] }
+serde_json = { workspace = true }
+anyhow = { workspace = true }
+clap = { workspace = true, features = ["cargo", "derive"] }
+tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
