--- a/gaia-kwsearch/gaia-kwsearch-common/Cargo.toml
+++ b/gaia-kwsearch/gaia-kwsearch-common/Cargo.toml
@@ -23,4 +23,4 @@ hyper-util         = { workspace = true, features = ["tokio"] }
 tokio-tungstenite  = { workspace = true }
 reqwest            = { workspace = true, features = ["json"] }
 pin-project-lite   = { workspace = true }
-endpoints          = { version = "0.26.0", features = ["index"] }
+endpoints          = { workspace = true, features = ["index"] }
