--- a/gaia-kwsearch/gaia-kwsearch-mcp-server-stdio/Cargo.toml
+++ b/gaia-kwsearch/gaia-kwsearch-mcp-server-stdio/Cargo.toml
@@ -19,5 +19,5 @@ hyper-util           = { workspace = true, features = ["tokio"] }
 tokio-tungstenite    = { workspace = true }
 reqwest              = { workspace = true, features = ["rustls-tls", "json"] }
 pin-project-lite     = { workspace = true }
-endpoints            = { version = "0.26.0", features = ["index"] }
+endpoints            = { workspace = true, features = ["index"] }
 gaia-kwsearch-common = { workspace = true }
