--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,12 +17,15 @@ members = [
     "gaia-calculator/gaia-calculator-mcp-server-sse",
     "gaia-weather/gaia-weather-mcp-server-sse",
     "gaia-qdrant/gaia-qdrant-mcp-server-sse",
-    "gaia-kwsearch/gaia-kwsearch-mcp-server-sse", "gaia-elastic/gaia-elastic-mcp-client", "gaia-elastic/gaia-elastic-mcp-server-sse", "gaia-elastic/gaia-elastic-mcp-common",
+    "gaia-kwsearch/gaia-kwsearch-mcp-server-sse",
+    "gaia-elastic/gaia-elastic-mcp-client",
+    "gaia-elastic/gaia-elastic-mcp-server-sse",
+    "gaia-elastic/gaia-elastic-mcp-common",
 ]
 resolver = "3"
 
 [workspace.dependencies]
-rmcp                 = { git = "https://github.com/modelcontextprotocol/rust-sdk.git", branch = "main" }
+rmcp                 = { git = "https://github.com/modelcontextprotocol/rust-sdk.git", rev = "c1c4c9a0" }
 tokio                = "1"
 serde                = "1.0"
 serde_json           = "1.0"
@@ -40,6 +43,7 @@ pin-project-lite     = "0.2"
 gaia-qdrant-common   = { path = "gaia-qdrant/gaia-qdrant-common" }
 gaia-kwsearch-common = { path = "gaia-kwsearch/gaia-kwsearch-common" }
 clap                 = { version = "4.4.6" }
+endpoints            = { version = "0.26.0", git = "https://github.com/LlamaEdge/LlamaEdge.git", branch = "feat-kw-fields" }
 
 [workspace.package]
 edition    = "2024"
