--- a/gaia-kwsearch/gaia-kwsearch-mcp-client/Cargo.toml
+++ b/gaia-kwsearch/gaia-kwsearch-mcp-client/Cargo.toml
@@ -6,11 +6,18 @@ repository = { workspace = true }
 license    = { workspace = true }
 
 [dependencies]
-rmcp                 = { workspace = true, features = ["client", "macros", "transport-io", "transport-child-process", "transport-sse"] }
-tokio                = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "io-std", "net", "fs", "time"] }
-serde_json           = { workspace = true }
-anyhow               = { workspace = true }
-tracing              = { workspace = true }
-tracing-subscriber   = { workspace = true, features = ["env-filter", "std", "fmt"] }
-clap                 = { version = "^4.5", features = ["cargo", "derive"] }
+rmcp = { workspace = true, features = [
+    "client",
+    "macros",
+    "transport-io",
+    "transport-child-process",
+    "transport-sse-client",
+    "reqwest",
+] }
+tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "io-std", "net", "fs", "time"] }
+serde_json = { workspace = true }
+anyhow = { workspace = true }
+tracing = { workspace = true }
+tracing-subscriber = { workspace = true, features = ["env-filter", "std", "fmt"] }
+clap = { version = "^4.5", features = ["cargo", "derive"] }
 gaia-kwsearch-common = { workspace = true }
