--- a/gaia-kwsearch/gaia-kwsearch-mcp-server-sse/Cargo.toml
+++ b/gaia-kwsearch/gaia-kwsearch-mcp-server-sse/Cargo.toml
@@ -21,5 +21,5 @@ hyper-util           = { workspace = true, features = ["tokio"] }
 tokio-tungstenite    = { workspace = true }
 reqwest              = { workspace = true, features = ["json"] }
 pin-project-lite     = { workspace = true }
-endpoints            = { version = "=0.26.0", features = ["index"] }
+endpoints            = { workspace = true, features = ["index"] }
 gaia-kwsearch-common = { workspace = true }
