--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,8 +42,8 @@ reqwest              = "0.12"
 pin-project-lite     = "0.2"
 gaia-qdrant-common   = { path = "gaia-qdrant/gaia-qdrant-common" }
 gaia-kwsearch-common = { path = "gaia-kwsearch/gaia-kwsearch-common" }
-clap                 = { version = "4.4.6" }
-endpoints            = { version = "0.26.0", git = "https://github.com/LlamaEdge/LlamaEdge.git", branch = "feat-kw-fields" }
+clap                 = "4.4.6"
+endpoints            = { version = "0.27.0" }
 
 [workspace.package]
 edition    = "2024"
