--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,8 @@ members = [
     "gaia-elastic/gaia-elastic-mcp-client",
     "gaia-elastic/gaia-elastic-mcp-server-sse",
     "gaia-elastic/gaia-elastic-mcp-common",
+    "gaia-tidb/gaia-tidb-mcp-server-sse",
+    "gaia-tidb/gaia-tidb-mcp-common", "gaia-tidb/gaia-tidb-mcp-client",
 ]
 resolver = "3"
 
@@ -44,6 +46,7 @@ gaia-qdrant-common   = { path = "gaia-qdrant/gaia-qdrant-common" }
 gaia-kwsearch-common = { path = "gaia-kwsearch/gaia-kwsearch-common" }
 clap                 = "4.4.6"
 endpoints            = { version = "0.28.0" }
+mysql                = { version = "26.0.0" }
 
 [workspace.package]
 edition    = "2024"
