--- a/gaia-calculator/gaia-calculator-mcp-client/Cargo.toml
+++ b/gaia-calculator/gaia-calculator-mcp-client/Cargo.toml
@@ -12,6 +12,8 @@ rmcp = { workspace = true, features = [
     "transport-io",
     "transport-child-process",
     "transport-sse-client",
+    "reqwest",
+    "transport-streamable-http-client",
 ] }
 tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "io-std", "net", "fs", "time"] }
 serde_json = { workspace = true }
