--- a/gaia-qdrant/gaia-qdrant-mcp-client/Cargo.toml
+++ b/gaia-qdrant/gaia-qdrant-mcp-client/Cargo.toml
@@ -13,6 +13,7 @@ rmcp = { workspace = true, features = [
     "transport-child-process",
     "transport-sse-client",
     "reqwest",
+    "transport-streamable-http-client",
 ] }
 tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "io-std", "net", "fs", "time", "signal"] }
 serde_json = { workspace = true }
