--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,8 +48,9 @@ pin-project-lite     = "0.2"
 gaia-qdrant-common   = { path = "gaia-qdrant/gaia-qdrant-common" }
 gaia-kwsearch-common = { path = "gaia-kwsearch/gaia-kwsearch-common" }
 clap                 = "4.4.6"
-endpoints            = { version = "0.29.0" }
-mysql                = { version = "26.0.0" }
+endpoints            = "0.29.0"
+mysql                = "26.0.0"
+once_cell            = "1.18"
 
 [workspace.package]
 edition    = "2024"
