--- a/gaia-qdrant/gaia-qdrant-mcp-client/Cargo.toml
+++ b/gaia-qdrant/gaia-qdrant-mcp-client/Cargo.toml
@@ -20,5 +20,5 @@ serde_json = { workspace = true }
 anyhow = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true, features = ["env-filter", "std", "fmt"] }
-clap = { version = "^4.5", features = ["cargo", "derive"] }
+clap = { workspace = true, features = ["cargo", "derive"] }
 gaia-qdrant-common = { workspace = true }
